--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@discord-archive/shared": "file:../shared",
+    "@types/pg": "^8.15.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17"
