- Updated Deployment steps to handle monorepos & dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend API for Discord Archive System",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "cd ../shared && npm install && npm run build",
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
