- Add Prebuild Script For FrontEnd

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,12 @@
-# React Frontend Configuration
+# Frontend Environment Variables
+
+# For local development (connects to local backend):
 VITE_API_BASE_URL=http://localhost:3001
+
+# For production deployment on Netlify (update with your Railway backend URL):
+# VITE_API_BASE_URL=https://your-backend-service.railway.app
+
+# Note: 
+# - Local .env file uses localhost for development
+# - Production uses Netlify environment variables (set in Netlify dashboard)
+# - Don't commit production URLs to .env files
