--- a/shared/package.json
+++ b/shared/package.json
@@ -20,10 +20,9 @@
     "dev": "tsc --watch",
     "clean": "rimraf dist"
   },
-  "devDependencies": {
-    "typescript": "^5.2.2"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.2.2"
   }
 }
